--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
 * {
   padding: 0;
   margin: 0;
 }
+html {
+  box-sizing: border-box;
+}
 
-body{
-  font-family: 'Outfit', sans-serif;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Outfit", sans-serif;
   background-color: hsl(212, 45%, 89%);
 }
 
 main {
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  padding: 1em;
 }
 
 section {
@@ -26,7 +40,6 @@ section {
   width: 70%;
   margin: 0 auto;
   padding: 1em;
-  /* height: 70vh; */
   border-radius: 1em;
   text-align: center;
 }
@@ -37,42 +50,34 @@ img {
   border-radius: 1em;
 }
 
-.card-image{
-  /* width: 200px; */
-  /* margin: 0 auto; */
-  /* height: 60%; */
+.card-image {
   margin-bottom: 1em;
 }
 
-.card-title{
+.card-title {
   height: 20%;
   margin-bottom: 1em;
   font-size: 1.3em;
 }
 
-.card-title > p{
+.card-title > p {
   font-weight: 700;
 }
 
-.card-p{
+.card-p {
   height: 20%;
   color: hsl(220, 15%, 55%);
   padding-bottom: 1em;
 }
 
-footer{
-  padding: 1em;
+@media all and (min-width: 750px) {
+  section {
+    width: 40%;
+  }
 }
 
-/* @media all and (min-width: 376px){
-  section{
-    width: 60%;
-  }
-
-} */
-@media all and (min-width: 376px){
-  section{
+@media all and (min-width: 1024px) {
+  section {
     width: 20%;
   }
-
 }
